# BFBArchitect

./: .gitignore  README.md  TODO.md  environment.yml  pyproject.toml  requirements.txt
.codex/skills/evaluate-bfb-graph/: SKILL.md
.github/workflows/: publish-to-pypi.yml
bfbarchitect/: BFBArchitect.py  BFBSolver.py  BFBVisualizer.py  SVCaller.py  __init__.py  batch_run.py  call_cnv.py  datatypes.py  graph_input.py  utils.py
bfbarchitect/resources/: __init__.py
docs/: bfb_graph_diagnosis.md  reverse_polarity_manifest.example.tsv  reverse_polarity_score_checks.example.tsv  solver_runtime_benchmarking.md  tst_identification_method.md
sample/: sample_cycles.txt  sample_graph.txt  sample_reads.txt
scripts/: batch_run.py  bfb_reverse_polarity_report.py  call_CNV.py  plot_solver_runtime_report.py  run_AA_output.py  run_bfb_library.py  run_solver_thread_matrix.sh  solver_runtime_analysis.py
simulation/: BFBSimulation.py  run_nanosim.py
src/: BFBArchitect.py  BFBSolver.py  BFBVisualizer.py  SVCaller.py  datatypes.py  utils.py
tests/: test_output_headers.py  test_solver_selection.py  test_tst_traversal.py
tools/: diagnose_bfb_graph.py
