[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BFBArchitect"
version = "0.1.0"
description = "A tool for detecting and reconstructing breakage-fusion-bridge (BFB) cycles using long reads"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Chaohui Li", email = "chl221@ucsd.edu"}
]
license = {text = "BSD 3-Clause"}

# Copy dependencies from pip freeze, manually or use the list below
dependencies = [
    "apricot-select>=0.6.1",
    "biopython>=1.86",
    "charset-normalizer>=3.4.4",
    "CNVkit>=0.9.10",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "filelock>=3.20.0",
    "fonttools>=4.60.1",
    "fsspec>=2025.10.0",
    "Jinja2>=3.1.6",
    "joblib>=1.5.2",
    "kiwisolver>=1.4.9",
    "llvmlite>=0.45.1",
    "MarkupSafe>=3.0.3",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "networkx>=3.5",
    "nose>=1.3.7",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "nvidia-cublas-cu12>=12.4.5.8",
    "nvidia-cuda-cupti-cu12>=12.4.127",
    "nvidia-cuda-nvrtc-cu12>=12.4.127",
    "nvidia-cuda-runtime-cu12>=12.4.127",
    "nvidia-cudnn-cu12>=9.1.0.70",
    "nvidia-cufft-cu12>=11.2.1.3",
    "nvidia-curand-cu12>=10.3.5.147",
    "nvidia-cusolver-cu12>=11.6.1.9",
    "nvidia-cusparse-cu12>=12.3.1.170",
    "nvidia-cusparselt-cu12>=0.6.2",
    "nvidia-nccl-cu12>=2.21.5",
    "nvidia-nvjitlink-cu12>=12.4.127",
    "nvidia-nvtx-cu12>=12.4.127",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pomegranate>=1.1.2",
    "PuLP>=3.3.0",
    "pyfaidx>=0.9.0.3",
    "pyparsing>=3.2.5",
    "pysam>=0.23.3",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "setuptools>=80.9.0",
    "six>=1.17.0",
    "sympy>=1.13.1",
    "threadpoolctl>=3.6.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "triton>=3.2.0",
    "typing_extensions>=4.15.0",
    "tzdata>=2025.2",
]

[project.urls]
Homepage = "https://github.com/AmpliconSuite/BFBArchitect"
Repository = "https://github.com/AmpliconSuite/BFBArchitect"

[project.scripts]
BFBArchitect = "src.BFBArchitect:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]  # Include data files if needed