[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BFBArchitect"
version = "0.1.1"
description = "A tool for detecting and reconstructing breakage-fusion-bridge (BFB) cycles using long reads"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Chaohui Li", email = "chl221@ucsd.edu"}
]
license = {text = "BSD 3-Clause"}

dependencies = [
    "pandas>=2.3.3",
    "pysam>=0.23.3",
    "matplotlib>=3.10.7",
    "PuLP>=3.3.0",
    "CNVkit>=0.9.10",
    "gurobipy",
]

[project.urls]
Homepage = "https://github.com/AmpliconSuite/BFBArchitect"
Repository = "https://github.com/AmpliconSuite/BFBArchitect"

[project.scripts]
"BFBArchitect.py" = "bfbarchitect.BFBArchitect:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bfbarchitect*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]  # Include data files if needed